--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <main>
         <div class="main1-div">
             <div class="mainimg-div">
-                <img src="/images/team1.png" alt="">
-                <img src="/images/team2.png" alt="">
-                <img src="/images/team3.png" alt="">
-                <img src="/images/team4.png" alt="">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
 
             </div>
             <div class="main1-cont">
