--- a/index.html
+++ b/index.html
@@ -36,19 +36,62 @@
     <main>
         <div class="main1-div">
             <div class="mainimg-div">
-                <img src="images/team1.png" alt="">
-                <img src="images/team2.png" alt="">
-                <img src="images/team3.png" alt="">
-                <img src="images/team4.png" alt="">
+                <img src="/images/team1.png" alt="">
+                <img src="/images/team2.png" alt="">
+                <img src="/images/team3.png" alt="">
+                <img src="/images/team4.png" alt="">
 
             </div>
             <div class="main1-cont">
-                <h2>Quick list <span>of Our</span><br><span class="span2">Features</span></h2>
-                <p>There are many variations of passages of Lorem Ipsum available,<br>but the majority have suffered
-                    alteration in some form, by injected<br>humour, or randomised words which don't look even</p>
+                <h2><span class="span1">Quick list</span> of Our<br><span class="span2">Features</span></h2>
+                <p>There are many variations of passages of Lorem Ipsum available,but the majority have suffered
+                    alteration in some form, by injecte humour, or randomised words which don't look even</p>
+                <button class="btn2 btn1">Explore More</button>
             </div>
         </div>
+        <div class="main2-div">
+            <div class="main2-cont">
+                <div class="main2head-cont">
+                    <h2>Features you will<br> love & enjoy</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or
+                        randomised words which don't look even</p>
+                </div>
+                <div class="mainsub-cont">
+                    <h2>Dexktop & Mobile Version</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised...........</p>
+                </div>
+                <div class="mainsub-cont">
+                    <h2>Drag & Drop Builder</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised...........</p>
+                </div>
+                <div class="mainsub-cont">
+                    <h2>Awesome Modern Design</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised...........</p>
+                </div>
+                <div class="mainsub-cont">
+                    <h2>Super Easy to Edit</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised...........</p>
+                </div>
 
+            </div>
+            <div class="mainimg2-div">
+                <img src="images/architect.png" alt="">
+                <div class="img2-cont">
+                    <h1>10+Year</h1>
+                    <p>Experience</p>
+                </div>
+
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
