--- a/index.html
+++ b/index.html
@@ -92,6 +92,42 @@
 
             </div>
         </div>
+        <div class="main3-div">
+            <div class="main3-cont">
+                <h1>Some Facts</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but<br>the majority have suffered
+                    alteration.</p>
+            </div>
+            <div class="main3-icons">
+                <div><img src="images/icons/ribon.png" alt="">
+                    <h1>54</h1>
+                    <p>Awards Winnings</p>
+                </div>
+                <div><img src="images/icons/projects.png" alt="">
+                    <h1>1458</h1>
+                    <p>Project Finished</p>
+                </div>
+                <div><img src="images/icons/customers.png" alt="">
+                    <h1>590</h1>
+                    <p>Clients Worked</p>
+                </div>
+                <div><img src="images/icons/email.png" alt="">
+                    <h1>22578</h1>
+                    <p>Email Send</p>
+                </div>
+            </div>
+        </div>
+        <div class="main4-div">
+            <div class="main4-cont"><h1>Our Sponspors</h1><p>There are many variations of passages of Lorem Ipsum available, but</p><p>the majority have suffered alteration.</p></div>
+            <div class="main4-spon">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+            <div class="main4-right"><p>All rights reserved copyright@2023 startup landing page design</p></div>
+        </div>
     </main>
     <footer></footer>
 </body>
